--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vite_react_shadcn_ts",
+  "homepage": "https://mohitbaghel24.github.io/sphere-3js/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -49,6 +50,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.25",
+    "gh-pages": "^6.3.0",
     "gsap": "^3.13.0",
     "howler": "^2.2.4",
     "i": "^0.3.7",
