--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite_react_shadcn_ts",
-  "homepage": "https://mohitbaghel24.github.io/sphere-3js/",
+  "homepage": "https://mohitbaghel.live",
   "private": true,
   "version": "0.0.0",
   "type": "module",
